# iris

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile.coq.local  README.md  _CoqProject  _CoqProject.coq_makefile  build-all  coq-iris-heap-lang.opam  coq-iris-staging.opam  coq-iris.opam  dune  iris-bot  test-normalizer.sed
docs/: classes.md  dune.md  editor.md  equalities_and_entailments.md  heap_lang.md  proof_guide.md  proof_mode.md  resource_algebras.md  style_guide.md
iris/: dune
iris/algebra/: agree.v  auth.v  big_op.v  cmra.v  cmra_big_op.v  cofe_solver.v  csum.v  dfrac.v  dra.v  dyn_reservation_map.v  excl.v  frac.v  functions.v  gmap.v  (+12 more)
iris_deprecated/: dune
iris_heap_lang/: adequacy.v  derived_laws.v  lang.v  locations.v  metatheory.v  primitive_laws.v  proofmode.v  proph_erasure.v  total_adequacy.v
iris_unstable/: dune
tests/: algebra.v  atomic.ref  atomic.v  bi.ref  bi.v  fixpoint.v  heap_lang.ref  heap_lang.v  heap_lang2.v  heap_lang_interpreter.v  heap_lang_printing.ref  heap_lang_printing.v  heapprop.v  heapprop_affine.v  ipm_paper.ref  ipm_paper.v  iprop.v  iris_notation.v  later_credits_paper.v  list_reverse.ref  list_reverse.v  lock.v  monotone.v  one_shot.ref  one_shot.v  one_shot_once.ref  one_shot_once.v  proofmode.ref  proofmode.v  proofmode_ascii.ref  proofmode_ascii.v  proofmode_iris.ref  proofmode_iris.v  proofmode_monpred.ref  proofmode_monpred.v  siprop.v  string_ident.ref  string_ident.v  telescopes.v  tree_sum.v
tex/: bib.bib  heaplang.sty  heaplang.tex  iris.sty  iris.tex  program-logic.tex  test.tex  upload
(+125 files in other folders)
