(env
 (_ ; Applies to all profiles (dev, release, ...).
  (coq
   (flags ; Configure the coqc flags.
    (:standard ; Keeping the default flags.
     ; Add custom flags (to be kept in sync with _CoqProject).
     -w -notation-overridden
     -w -redundant-canonical-projection
     -w -unknown-warning
     -w -argument-scope-delimiter)))))
